--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "pigeon-maps": "^0.21.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
