--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "@turf/turf": "^7.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
