--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@turf/turf": "^7.1.0",
+        "@types/geojson": "^7946.0.14",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
