--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@turf/turf": "^7.1.0",
         "@types/geojson": "^7946.0.14",
         "dotenv": "^16.4.5",
+        "leaflet": "^1.9.4",
         "opencage-api-client": "^1.0.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
