--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "leaflet": "^1.9.4",
         "opencage-api-client": "^1.0.7",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-leaflet": "^4.2.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.14.0",
